# quick-fetch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run.bat  setup.py
config_files/: default.ini
quick_fetch/: __init__.py  __main__.py  config.py  configuration.py  constants.py  download.py  download_helper.py  driver.py  exit_handler.py  fetch.py  file.py  file_helper.py  grab.py  hotkeys.py  instructions.py  main.py  page_navigator.py  sound.py  url_handler.py  xpath.py
quick_fetch/config/: default.ini
src/quick_fetch/: __init__.py  __main__.py  configuration.py  download_helper.py  exceptions.py  exit_handler.py  fetch.py  file_helper.py  grab.py  hotkeys.py  main.py  mode.py  page_navigator.py
src/quick_fetch/config/: __init__.py  constants.py  default.ini  exceptions.py
